--- a/style.css
+++ b/style.css
@@ -6,10 +6,9 @@
     padding: 0;
     box-sizing: border-box;
     scroll-behavior: smooth;
-   
 }
 
-header{
+header {
     background-color: rgb(98, 68, 100);
     width: 100%;
     position: fixed;
@@ -18,9 +17,10 @@ header{
     justify-content: space-between;
     align-items: center;
     padding: 10px 100px;
+    flex-wrap: wrap;
 }
 
-.logo{
+.logo {
     text-decoration: none;
     color: aliceblue;
     text-transform: uppercase;
@@ -28,20 +28,27 @@ header{
     font-size: 1.8em;
 }
 
-.navigation a{
+.navigation {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 10px;
+}
+
+.navigation a {
     color: aliceblue;
     text-decoration: none;
     font-size: 1.1em;
     font-weight: 500;
     padding-left: 30px;
-
+    margin: 5px;
 }
 
-.navigation a:hover{
+.navigation a:hover {
     color: black;
 }
 
-section{
+section {
     padding: 100px 200px;
 }
 
@@ -56,22 +63,23 @@ section{
     background-attachment: fixed;
 }
 
-.main h2{
-    color:  rgb(98, 68, 100);
+.main h2 {
+    color: rgb(98, 68, 100);
     font-size: 1.4em;
     font-weight: 500;
 }
 
-.main h2 span{
+.main h2 span {
     display: inline-block;
     margin-top: 10px;
     color: aliceblue;
     font-size: 3em;
     font-weight: 600;
+    font-size: clamp(2em, 5vw, 3em);
 }
 
 .main h3 {
-    color:  rgb(98, 68, 100);
+    color: rgb(98, 68, 100);
     font-size: 1.4em;
     font-weight: 700;
     letter-spacing: 1px;
@@ -86,9 +94,8 @@ section{
     transition: 0.9s ease;
 }
 
-
 .social-icons a:hover {
-    color:  rgb(98, 68, 100);
+    color: rgb(98, 68, 100);
     transform: scale(1.1);
 }
 
@@ -99,32 +106,32 @@ section{
     font-size: 2.2em;
     font-weight: 800;
     margin-bottom: 30px;
+    font-size: clamp(1.8em, 3vw, 2.2em);
 }
 
 .card a {
-    color:rgb(98, 68, 100);
+    color: rgb(98, 68, 100);
     background-color: aliceblue;
     text-decoration: none;
     display: flex;
     justify-content: center;
     flex-direction: row;
     flex-wrap: wrap;
-    box-shadow: 0 3.5px 25px rgba(1 1 1 / 40%);
+    box-shadow: 0 3.5px 25px rgba(1, 1, 1, 0.4);
     border-radius: 10px;
     padding: 25px;
     transition: 0.8s ease;
-    
-}
-.card{
-    transition: 0.8s ease;
 }
 
+.card {
+    transition: 0.8s ease;
+}
 
 .card:hover {
     transform: scale(1.1);
 }
 
-.Aboutmecontent{
+.Aboutmecontent {
     text-align: center;
 }
 
@@ -132,10 +139,9 @@ section{
     position: relative;
     max-width: 1200px;
     margin: 0 auto;
-  }
-  
-  /* The actual timeline (the vertical ruler) */
-  .timeline::after {
+}
+
+.timeline::after {
     content: '';
     position: absolute;
     width: 6px;
@@ -144,18 +150,16 @@ section{
     bottom: 0;
     left: 50%;
     margin-left: -3px;
-  }
-  
-  /* Container around content */
-  .container {
+}
+
+.container {
     padding: 10px 40px;
     position: relative;
     background-color: inherit;
     width: 50%;
-  }
-  
-  /* The circles on the timeline */
-  .container::after {
+}
+
+.container::after {
     content: '';
     position: absolute;
     width: 25px;
@@ -166,20 +170,17 @@ section{
     top: 15px;
     border-radius: 50%;
     z-index: 1;
-  }
-  
-  /* Place the container to the left */
-  .left {
+}
+
+.left {
     left: 0;
-  }
-  
-  /* Place the container to the right */
-  .right {
+}
+
+.right {
     left: 50%;
-  }
-  
-  /* Add arrows to the left container (pointing right) */
-  .left::before {
+}
+
+.left::before {
     content: " ";
     height: 0;
     position: absolute;
@@ -190,10 +191,9 @@ section{
     border: medium solid white;
     border-width: 10px 0 10px 10px;
     border-color: transparent transparent transparent white;
-  }
-  
-  /* Add arrows to the right container (pointing left) */
-  .right::before {
+}
+
+.right::before {
     content: " ";
     height: 0;
     position: absolute;
@@ -204,55 +204,20 @@ section{
     border: medium solid white;
     border-width: 10px 10px 10px 0;
     border-color: transparent white transparent transparent;
-  }
-  
-  /* Fix the circle for containers on the right side */
-  .right::after {
+}
+
+.right::after {
     left: -16px;
-  }
-  
-  /* The actual content */
-  .content {
+}
+
+.content {
     padding: 20px 30px;
     background-color: white;
     position: relative;
     border-radius: 6px;
-  }
-  
-  /* Media queries - Responsive timeline on screens less than 600px wide */
-  @media screen and (max-width: 600px) {
-  /* Place the timelime to the left */
-    .timeline::after {
-      left: 31px;
-    }
-  
-  /* Full-width containers */
-    .container {
-      width: 100%;
-      padding-left: 70px;
-      padding-right: 25px;
-    }
-  
-  /* Make sure that all arrows are pointing leftwards */
-    .container::before {
-      left: 60px;
-      border: medium solid white;
-      border-width: 10px 10px 10px 0;
-      border-color: transparent white transparent transparent;
-    }
-  
-  /* Make sure all circles are at the same spot */
-    .left::after, .right::after {
-      left: 15px;
-    }
-  
-  /* Make all right containers behave like the left ones */
-    .right {
-      left: 0%;
-    }
-  }
+}
 
-.Contactcontent{
+.Contactcontent {
     display: flex;
     justify-content: center;
     flex-direction: row;
@@ -261,18 +226,17 @@ section{
 .ContactCard {
     background-color: white;
     text-align: center;
-    width: 21.25em;
-    box-shadow: 0 3.5px 25px rgba(1 1 1 / 40%);
+    width: 100%;
+    box-shadow: 0 3.5px 25px rgba(1, 1, 1, 0.4);
     border-radius: 10px;
     padding: 25px;
-    margin: 25px;
+    margin: 15px auto;
     transition: 0.8s ease;
 }
 
-.ContactCard a{
+.ContactCard a {
     text-decoration: none;
 }
-
 
 .ContactCard:hover {
     transform: scale(1.1);
@@ -286,21 +250,54 @@ section{
     justify-content: space-between;
 }
 
+@media (max-width: 1023px) {
+    header {
+        padding: 12px 20px;
+    }
 
-@media (max-width:1023px){
-  .header{
-    padding: 12px 20px;
+    .navigation a {
+        padding-left: 10px;
+    }
 
-  }
-  .navigation a{
-    padding-left: 10px;
-  }
-  .title{
-    font-size: 1.8em;
-  }
-  .section{
-    padding: 80px 20px;
-  }
+    .title {
+        font-size: 1.8em;
+    }
 
-  .main-content h2{}
+    section {
+        padding: 80px 20px;
+    }
+
+    .ContactCard {
+        width: 100%;
+        margin: 15px auto;
+    }
+
+    .social-icons a {
+        font-size: 1.4em;
+    }
+
+    .timeline::after {
+        left: 25px;
+    }
+
+    .container {
+        width: 100%;
+        padding-left: 70px;
+        padding-right: 25px;
+    }
+
+    .container::before {
+        left: 60px;
+        border: medium solid white;
+        border-width: 10px 10px 10px 0;
+        border-color: transparent white transparent transparent;
+    }
+
+    .left::after, .right::after {
+        left: 15px;
+    }
+
+    .right {
+        left: 0%;
+    }
 }
